--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,4 +1,8 @@
-@forward "home";
-@forward "thankyou";
+// @forward "home";
+// @forward "thankyou";
 @forward "insurance-type";
 @forward "insurance-upload";
+// @forward "index";
+@forward "driver-detail";
+@forward "other-pages";
+@forward "progress-bar";
