--- a/src/scss/utils/_color.scss
+++ b/src/scss/utils/_color.scss
@@ -25,6 +25,8 @@ $colors: ("primary": $primary,
     "blue-light": $blue-light,
     "blue-light2": $blue-light2,
     "blue-border": $blue-border,
+    "sucess": $sucess,
+    "dark-blue": $dark-blue,
 
 ) !default;
 
