--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -24,7 +24,8 @@ $has-error: #BF0101;
 $blue-light: #E6F1F9;
 $blue-light2: #F2F8FD;
 $blue-border: #99C4E5;
-$sucess: #01BF42;
+$dark-blue: #22305D;
+
 
 
 
