--- a/src/assets/css/pages/insurance-type.css
+++ b/src/assets/css/pages/insurance-type.css
@@ -1,8 +1,7 @@
 /* custom main 
  UnExpected King Tirth Shah */ 
  
- @charset "UTF-8";
-/*flex cross browser mixin*/
+ /*flex cross browser mixin*/
 /*
 0px - 360px:		XS Phone
 360px - 576px: 		Phone
@@ -40,35 +39,6 @@
   width: 100%;
 }
 
-@media only screen and (max-width: 575px) {
-  .navbar .me-3 {
-    margin-right: 0rem !important;
-  }
-  .navbar .navbar-toggler-icon {
-    width: auto;
-    height: auto;
-    margin-right: 15px;
-  }
-  .navbar .navbar-brand {
-    max-width: 50px;
-  }
-  .navbar .navbar-brand img {
-    width: 100%;
-  }
-  .navbar .f-dropdown > span > span {
-    font-size: 14px;
-    line-height: 18px;
-    padding-right: 16px;
-  }
-  .navbar .f-dropdown > span {
-    padding: 5px 10px;
-  }
-  .f-dropdown > span img {
-    width: 14px;
-    height: 10px;
-    margin-right: 5px;
-  }
-}
 @media (min-width: 412px) {
   @supports (display: grid) {
     .grid {
@@ -146,132 +116,7 @@
   font-size: 14px;
   line-height: 22px;
   text-align: center;
-  color: #616161;
-}
-
-.radio-check-icon label > input[type=radio] + span {
-  margin-bottom: 10px;
-  padding: 10px 15px;
-  background-color: #aaa;
-  display: inline-block;
-  border-radius: 3px;
-  color: var(--color-white);
-  -webkit-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-.radio-check-icon label > input[type=radio] {
-  display: none;
-}
-.radio-check-icon input[type=radio]:checked + span:after {
-  content: "\f00c";
-  margin-left: 10px;
-}
-
-.radio-check-switch {
-  margin-bottom: 10px;
-}
-.radio-check-switch .ins-title {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  /* identical to box height, or 150% */
-  text-align: center;
-  color: var(--color-black);
-  position: absolute;
-  bottom: 16px;
-}
-.radio-check-switch input[type=radio] {
-  display: none;
-}
-.radio-check-switch input[type=radio]:checked + .radio-switch-state .icon-on:after {
-  content: "✓";
-  margin-left: 100;
-  left: auto;
-  right: 15px;
-  top: 10px;
-  font-size: 16px;
-}
-.radio-check-switch input[type=file] {
-  display: none;
-}
-.radio-check-switch .radio-switch-state {
-  border-radius: 3px;
-  color: var(--color-primary);
-  position: relative;
-  overflow: hidden;
-  vertical-align: middle;
-  text-align: center;
-  background: var(--color-white);
-  border-radius: 12px;
-  padding: 10px;
-  display: block;
-  position: relative;
-  margin: 10px;
-  cursor: pointer;
-  height: 170px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: relative;
-  -webkit-box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
-          box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
-}
-.radio-check-switch .radio-switch-state .icon-on {
-  display: inline-block;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 0;
-}
-.radio-check-switch .radio-switch-state .icon-on:after {
-  width: auto;
-  display: block;
-  line-height: auto;
-  position: absolute;
-  content: "✓";
-  margin-left: 100;
-  left: 100%;
-}
-.radio-check-switch .radio-switch-state .icon-off {
-  display: inline-block;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 0;
-}
-.radio-check-switch .radio-switch-state .icon-off:after {
-  width: auto;
-  display: block;
-  line-height: auto;
-  position: absolute;
-  content: "\f056";
-  left: 0;
-}
-
-.radio-check-switch input[type=radio]:checked .radio-switch-state {
-  -webkit-box-shadow: 0px 20px 30px #DDEEFB;
-          box-shadow: 0px 20px 30px #DDEEFB;
-}
-
-.radio-check-switch .radio-switch-state {
-  margin: 20px;
-}
-
-.owl-carousel .owl-stage-outer {
-  padding: 30px 0;
+  color: var(--color-title);
 }
 
 .contain-wrapper-sm {
@@ -292,42 +137,6 @@
   border-radius: 8px;
   padding: 15px;
   overflow: hidden;
-}
-
-.fs-18 {
-  font-size: 18px;
-}
-
-.fs-22 {
-  font-size: 22px;
-}
-
-.fs-12 {
-  font-size: 12px;
-}
-
-.text-gray {
-  color: var(--color-light-gray);
-}
-
-.text-black {
-  color: var(--color-black);
-}
-
-.fs-14 {
-  font-size: 14px;
-}
-
-.fs-16 {
-  font-size: 16px;
-}
-
-.fw-500 {
-  font-weight: 500;
-}
-
-.fw-600 {
-  font-weight: 600;
 }
 
 .btn-add {
@@ -371,7 +180,7 @@
 }
 
 .note {
-  color: #01BF42;
+  color: var(--color-sucess);
   font-size: 14px;
   line-height: 22px;
   margin-bottom: 0;
