--- a/src/assets/css/pages/insurance-upload copy.css
+++ b/src/assets/css/pages/insurance-upload copy.css
@@ -1,7 +1,7 @@
 /* custom main 
- UnExpected King Tirth Shah */ 
- 
- /*flex cross browser mixin*/
+ UnExpected King Tirth Shah */
+
+/*flex cross browser mixin*/
 /*
 0px - 360px:		XS Phone
 360px - 576px: 		Phone
@@ -27,6 +27,20 @@
 	 1680  =	105em
 	 1920  =	120em
 */
+.navbar .navbar-toggler-icon {
+  width: auto;
+  height: auto;
+  margin-right: 30px;
+}
+
+.navbar .navbar-brand {
+  max-width: 70px;
+}
+
+.navbar .navbar-brand img {
+  width: 100%;
+}
+
 @media (min-width: 412px) {
   @supports (display: grid) {
     .grid {
@@ -35,13 +49,16 @@
       grid-gap: 15px 15px;
     }
   }
+
   .grid__items.grid1 {
     grid-row: 4/4;
   }
+
   .grid__items.grid2 {
     grid-column: 1/1;
   }
 }
+
 @media (min-width: 576px) {
   @supports (display: grid) {
     .grid {
@@ -50,13 +67,16 @@
       grid-gap: 15px 15px;
     }
   }
+
   .grid__items.grid1 {
     grid-row: 2/4;
   }
+
   .grid__items.grid2 {
     grid-column: 1/3;
   }
 }
+
 @media (min-width: 768px) {
   @supports (display: grid) {
     .grid {
@@ -65,13 +85,16 @@
       grid-gap: 15px 15px;
     }
   }
+
   .grid__items.grid1 {
     grid-row: 1/4;
   }
+
   .grid__items.grid2 {
     grid-column: 2/3;
   }
 }
+
 @media (min-width: 992px) {
   @supports (display: grid) {
     .grid {
@@ -80,13 +103,16 @@
       grid-gap: 15px 15px;
     }
   }
+
   .grid__items.grid1 {
     grid-row: 1/3;
   }
+
   .grid__items.grid2 {
     grid-column: 2/4;
   }
 }
+
 @media (min-width: 1200px) {
   @supports (display: grid) {
     .grid {
@@ -116,6 +142,7 @@
   border-radius: 50%;
   padding: 12px 0 0 0;
 }
+
 .user-info .user-welcome {
   font-family: "Roboto";
   font-style: normal;
@@ -132,14 +159,17 @@
   border-radius: 10px;
   padding: 20px;
 }
+
 .upload-box .radio-switch-state {
   padding: 10px;
   -webkit-box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
-          box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
 }
+
 .upload-box .radio-switch-state:hover {
   background: #E6F1F9;
 }
+
 .upload-box .radio-switch-state p.ins-title {
   font-size: 12px;
   line-height: 18px;
@@ -151,6 +181,7 @@
   border-radius: 4px;
   height: 8px;
 }
+
 .progress .progress-bar {
   background-color: var(--color-primary);
 }
@@ -166,38 +197,10 @@
   color: var(--color-black);
 }
 
-.remove {
-  background: #f1f1f1;
-}
-.remove td {
-  font-style: italic;
-}
-
-.table > tbody > tr > td {
-  vertical-align: middle;
-}
-
-.input-group {
-  width: 100%;
-}
-
-.editable {
-  border: none;
-  padding: 0;
-  margin: 0;
-  text-shadow: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.addBtn {
-  cursor: pointer;
-}
-
 .upload-btn {
   background: #FFFFFF;
   -webkit-box-shadow: 0px 6px 20px #DDEEFB;
-          box-shadow: 0px 6px 20px #DDEEFB;
+  box-shadow: 0px 6px 20px #DDEEFB;
   border-radius: 4px;
   height: 44px;
   width: 100%;
@@ -210,24 +213,124 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* Blue/Blue-10 */
-  color: #016BBF;
+  color: var(--color-primary);
+}
+
+.owl-prev {
+  left: -20px;
+  top: 50%;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 34px;
+  height: 34px;
+}
+
+.owl-next {
+  right: -60px;
+  top: 50%;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 34px;
+  height: 34px;
+}
+
+.owl-theme .owl-nav [class*=owl-],
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev {
+  color: var(--color-black);
+  font-size: unset;
+  margin: 5px;
+  padding: 4px 7px;
+  background: white;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 3px;
+  border-radius: 50%;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.owl-theme .owl-nav [class*=owl-] span,
+.owl-carousel .owl-nav button.owl-next span,
+.owl-carousel .owl-nav button.owl-prev span {
+  font-size: 32px;
+}
+
+.owl-carousel .owl-item img {
+  /* display: block; */
+  width: auto;
 }
 
 @media only screen and (max-width: 575px) {
   .upload-box {
     width: 100%;
   }
+
   .progress-text {
     margin-bottom: 16px;
   }
+
   .back-arrow {
     position: absolute !important;
   }
 }
+
+.uploaded-document-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 10px;
+  background: var(--color-blue-light);
+  text-align: center;
+  margin: 10px;
+  height: 170px;
+  border-radius: 12px;
+}
+
+.uploaded-document-block .document-thumb-block {
+  position: relative;
+  display: inline-block;
+  border: 1px solid var(--color-blue-border);
+  padding: 3px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.uploaded-document-block .document-thumb-block .btn-remove {
+  position: absolute;
+  right: 4px;
+  top: 4px;
+}
+
+.uploaded-document-block p.document-title {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 500;
+}
+
 /*# sourceMappingURL=insurance-upload copy.css.map */
