--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -38,6 +38,22 @@ a {
     text-decoration: none;
 }
 
+.text-sucess {
+    color: var(--color-sucess);
+
+}
+
+.text-left {
+    text-align: left;
+}
+
+body {
+    font-family: "Roboto";
+    font-size: 14px;
+    // padding: 80px 10px;
+    background: #F8FBFE;
+}
+
 .bg-white {
     background-color: var(--color-white);
 }
@@ -49,6 +65,43 @@ a {
 .pt-4 {
     padding-top: 2.75rem;
 }
+
+.fs-18 {
+    font-size: 18px;
+}
+
+.fs-22 {
+    font-size: 22px;
+}
+
+.fs-12 {
+    font-size: 12px;
+}
+
+.text-gray {
+    color: var(--color-light-gray);
+}
+
+.text-black {
+    color: var(--color-black);
+}
+
+.fs-14 {
+    font-size: 14px;
+}
+
+.fs-16 {
+    font-size: 16px;
+}
+
+.fw-500 {
+    font-weight: 500;
+}
+
+.fw-600 {
+    font-weight: 600;
+}
+
 
 .d-flex {
     @include flexbox();
@@ -280,8 +333,8 @@ main {
         h3 {
             &.title {
 
-                font-size: 28px;
-                line-height: 48px;
+                font-size: 23px;
+                line-height: 42px;
 
             }
         }
@@ -310,7 +363,7 @@ main {
         h3 {
             &.title {
 
-                font-size: 24px;
+                font-size: 20px;
                 line-height: 34px;
 
             }
@@ -329,11 +382,19 @@ main {
         }
 
     }
-}
 
+    .fs-18 {
+        font-size: 15px !important;
+    }
 
+    .checkbox-label {
 
-.text-sucess {
-    color: #01BF42;
+        margin-left: 0 !important;
 
+        font-size: 12px;
+    }
+
+    .radio-label {
+        font-size: 14px !important;
+    }
 }
