--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -121,77 +121,39 @@
 
 }
 
-// .dropdown {
-//     &:hover {
-//         .dropdown-menu {
-//             visibility: visible;
-//             opacity: 1;
-//             top: 25px !important;
-//             margin-top: 25px !important;
-//         }
 
-//         .dropdown-toggle {
-//             &::after {
-//                 transform: rotate(180deg);
-//             }
-//         }
-//     }
 
-//     .dropdown-toggle {
-//         padding: 16px 0;
-//         padding-right: 20px;
-//         position: relative;
-//         @include toRem(font-size, 16px);
-//         color: var(--color-primary-text);
 
-//         &::after {
-//             background: url(../../assets/images/down-arrow-red-icon.svg) no-repeat;
-//             background-position: center top 5px;
-//             border: 0;
-//             width: 12px;
-//             height: 15px;
-//             position: absolute;
-//             top: 0;
-//             right: 0;
-//             bottom: 0;
-//             margin: auto;
-//             @include transition(.3s ease-in-out);
-//         }
+.toggle-btn {
+    border: 1px solid #CCCCCC;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 4px;
+    background: var(--color-white);
+    height: 48px;
+    min-width: 100px;
+    font-size: 16px;
+    color: var(--color-blue);
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-family: "Roboto";
+    cursor: pointer;
+    line-height: 1;
 
-//         &.show {
-//             &::after {
-//                 transform: rotate(180deg);
-//             }
-//         }
-//     }
-
-//     .dropdown-menu {
-//         box-shadow: 0px 6px 12px -6px rgba(24, 39, 75, 0.12), 0px 8px 24px -4px rgba(24, 39, 75, 0.08);
-//         border: 1px solid var(--color-divider);
-//         right: 0 !important;
-//         left: unset !important;
-//         margin-top: 50px !important;
-//         transform: unset !important;
-//         padding: 0;
-//         display: block !important;
-//         visibility: hidden;
-//         opacity: 0;
-
-//         &.show {
-//             opacity: 1;
-//             visibility: visible;
-//         }
-
-//         li {
-//             &:not(:last-child) {
-//                 border-bottom: 1px solid var(--color-divider);
-//             }
-
-//             .dropdown-item {
-//                 @include toRem(font-size, 16);
-//                 color: var(--color-primary-text);
-//                 padding: 13px 15px;
-//             }
-//         }
-//     }
-// }
+    &.active {
+        background: var(--color-blue-light2);
+        border: 1px solid var(--color-primary);
+    }
+}
