--- a/src/scss/component/_form.scss
+++ b/src/scss/component/_form.scss
@@ -178,21 +178,7 @@ form {
                             border-radius: 5px;
                         }
 
-                        .like-unlike {
-                            @include flexbox();
-                            @include align-items(center);
-                            margin-top: 10px;
-                            gap: 10px;
 
-                            img {
-                                width: 20px;
-                            }
-
-                            span {
-                                @include toRem(font-size, 16);
-                                color: #000025;
-                            }
-                        }
                     }
                 }
 
@@ -372,35 +358,8 @@ form {
                                 font-weight: 500;
                             }
 
-                            .progress-bar {
-                                width: 112px;
-                                height: 6px;
-                                background-color: #F7F7F7;
-                                border: 1px solid var(--color-box-border);
-                                border-radius: 2px;
-                                position: relative;
-                                overflow: hidden;
 
-                                span {
-                                    position: absolute;
-                                    left: -0.5px;
-                                    right: 0;
-                                    height: 100%;
-                                    top: 0;
-                                    bottom: 0;
-                                    background-color: var(--color-primary);
-                                    height: 6px;
-                                }
-                            }
 
-                            .file-size {
-                                @include toRem(font-size, 18);
-                                @include toRem(line-height, 21.6);
-                                color: #000025;
-                                font-weight: 500;
-                                opacity: 0.4;
-                                text-transform: uppercase;
-                            }
                         }
 
                         .btn-cancel {
@@ -447,234 +406,7 @@ form {
 }
 
 
-// select 2 dropdown
 
-.f-dropdown {
-    --max-scroll: 3;
-    position: relative;
-    z-index: 10;
-
-    select {
-        display: none;
-    }
-
-    &>span {
-        cursor: pointer;
-        padding: 8px 12px;
-        display: flex;
-        align-items: center;
-        position: relative;
-        background: #fff;
-        transition: color .2s ease, border-color .2s ease;
-        height: 45px;
-        border: 1px solid var(--color-border-light);
-        @include border-box;
-        @include border-radius(6px);
-        border-radius: 4px;
-        color: $title;
-
-        >span {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            padding-right: 17px;
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 18px;
-        }
-
-        img {
-            width: 16px;
-            height: 12px;
-            margin-right: 5px;
-        }
-
-        &:before,
-        &:after {
-            content: "";
-            display: block;
-            position: absolute;
-            width: 8px;
-            height: 1.5px;
-            border-radius: 1px;
-            top: 50%;
-            right: 12px;
-            background: #000;
-            transition: all 0.3s ease;
-        }
-
-        &:before {
-            margin-right: 4px;
-            transform: scale(0.96, 0.8) rotate(50deg);
-        }
-
-        &:after {
-            transform: scale(0.96, 0.8) rotate(-50deg);
-        }
-    }
-
-    ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        opacity: 0;
-        visibility: hidden;
-        position: absolute;
-        max-height: calc(var(--max-scroll) * 46px);
-        top: 40px;
-        left: 0;
-        z-index: 1;
-        right: 0;
-        background: #FFF;
-        border: 1px solid #CCC;
-        border-radius: 6px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        transform-origin: 0 0;
-        transition: opacity 0.2s ease, visibility 0.2s ease,
-            transform 0.3s cubic-bezier(0.4, 0.6, 0.5, 1.32);
-        transform: translate(0, 5px);
-
-        li {
-            padding: 0;
-            margin: 0;
-
-            a {
-                cursor: pointer;
-                display: block;
-                padding: 8px 12px;
-                color: #000;
-                text-decoration: none;
-                outline: none;
-                position: relative;
-                transition: all .2s ease;
-                display: flex;
-                align-items: center;
-
-                img {
-                    width: 16px;
-                    height: 12px;
-                    margin-right: 10px;
-                }
-
-                span {
-                    font-family: "Roboto";
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 12px;
-                    line-height: 18px;
-                }
-
-                &:hover {
-                    color: #5C6BC0;
-                }
-            }
-
-            &.active {
-                a {
-                    color: #FFF !important;
-                    background: #303F9F;
-
-                    &:before,
-                    &:after {
-                        --scale: 0.6;
-                        content: "";
-                        display: block;
-                        width: 10px;
-                        height: 2px;
-                        position: absolute;
-                        right: 12px;
-                        top: 50%;
-                        opacity: 0;
-                        background: #FFF;
-                        transition: all 0.2s ease;
-                    }
-
-                    &:before {
-                        transform: rotate(45deg) scale(var(--scale));
-                    }
-
-                    &:after {
-                        transform: rotate(-45deg) scale(var(--scale));
-                    }
-
-                    // &:hover {
-
-                    //     &:before,
-                    //     &:after {
-                    //         --scale: 0.9;
-                    //         opacity: 1;
-                    //     }
-                    // }
-                }
-            }
-
-            // &:first-child {
-            //     a {
-            //         border-radius: 6px 6px 0 0;
-            //     }
-            // }
-
-            // &:last-child {
-            //     a {
-            //         border-radius: 0 0 6px 6px;
-            //     }
-            // }
-        }
-    }
-
-    &.disabled {
-        opacity: 0.7;
-
-        >span {
-            cursor: not-allowed;
-        }
-    }
-
-    &.filled {
-        &>span {
-            color: #000;
-        }
-    }
-
-    &.open {
-        z-index: 15;
-
-        &>span {
-            border-color: #AAA;
-
-            &:before,
-            &:after {
-                background: #000;
-            }
-
-            &:before {
-                transform: scale(0.96, 0.8) rotate(-50deg);
-            }
-
-            &:after {
-                transform: scale(0.96, 0.8) rotate(50deg);
-            }
-        }
-
-        ul {
-            opacity: 1;
-            visibility: visible;
-            transform: translate(0, 12px);
-            transition: opacity 0.3s ease, visibility 0.3s ease,
-                transform 0.3s cubic-bezier(0.4, 0.6, 0.5, 1.32);
-        }
-    }
-}
-
-
-
-
-.dropdown-width {
-    min-width: 300px;
-}
 
 /* --------------------------- */
 
@@ -691,9 +423,9 @@ form {
 .f-control {
     font-size: 14px;
     line-height: normal;
-    color: #000;
+    color: var(--color-black);
     display: inline-block;
-    background-color: #ffffff;
+    background-color: var(--color-white);
     border: #ccc 1px solid;
     border-radius: 6px;
     padding: 8px 12px;
@@ -708,12 +440,6 @@ label {
     margin-bottom: 10px;
 }
 
-body {
-    font-family: "Roboto";
-    font-size: 14px;
-    // padding: 80px 10px;
-    background: #F8FBFE;
-}
 
 
 
@@ -1007,64 +733,148 @@ body {
 
 
 
-.responsive-video {
-    border: 1px solid #e6e6e6;
-    padding: 13px;
-    border-radius: 8px;
 
-    video {
-        border-radius: 8px;
+.radio-check-icon {
+    label {
+        >input[type="radio"]+span {
+            margin-bottom: 10px;
+            padding: 10px 15px;
+            background-color: $background-color_1;
+            display: inline-block;
+            border-radius: 3px;
+            color: var(--color-white);
+            transition: all .5s ease;
+        }
+
+        >input[type="radio"] {
+            display: none;
+        }
+    }
+
+    input[type="radio"] {
+        &:checked+span {
+            &:after {
+                content: "\f00c";
+                margin-left: 10px;
+            }
+        }
     }
 }
 
-.progress-round {
-    background: #016BBF;
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 18px;
-    line-height: 18px;
-    /* identical to box height, or 120% */
+.radio-check-switch {
+    margin-bottom: 10px;
 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-
-}
-
-.progress-vs {
-    background: #E6F1F9;
-    color: #016BBF;
-    font-size: 16px;
-}
-
-.amnt-monthly {
-    font-size: 30px;
-    line-height: 45px;
-    /* identical to box height, or 150% */
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-
-    color: #016BBF;
-
-    .monthly-amnt {
+    .ins-title {
         font-family: 'Roboto';
         font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 28px;
-        /* identical to box height, or 156% */
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        /* identical to box height, or 150% */
+        text-align: center;
+        color: var(--color-black);
+        position: absolute;
+        bottom: 16px;
+    }
 
 
-        color: #22305D;
+    input[type="radio"] {
+        display: none;
+
+        &:checked+.radio-switch-state {
+            .icon-on {
+                &:after {
+                    content: "✓";
+                    margin-left: 100;
+                    left: auto;
+                    right: 15px;
+                    top: 10px;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+
+    input[type="file"] {
+        display: none;
+    }
+
+    .radio-switch-state {
+        border-radius: 3px;
+        color: var(--color-primary);
+        position: relative;
+        overflow: hidden;
+        vertical-align: middle;
+        text-align: center;
+        background: var(--color-white);
+        // box-shadow: 0px 20px 30px #DDEEFB;
+        // box-shadow: 0px 20px 30px #DDEEFB;
+        border-radius: 12px;
+        padding: 10px;
+        display: block;
+        position: relative;
+        margin: 10px;
+        cursor: pointer;
+        height: 170px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        position: relative;
+        box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+
+        .icon-on {
+            display: inline-block;
+            text-align: center;
+            position: absolute;
+            width: 100%;
+            top: 0;
+
+            &:after {
+                width: auto;
+                display: block;
+                line-height: auto;
+                position: absolute;
+                // transition: all .5s ease;
+                content: "✓";
+                margin-left: 100;
+                left: 100%;
+            }
+        }
+
+        .icon-off {
+            display: inline-block;
+            text-align: center;
+            position: absolute;
+            width: 100%;
+            top: 0;
+
+            &:after {
+                width: auto;
+                display: block;
+                line-height: auto;
+                position: absolute;
+                // transition: all .5s ease;
+                content: "\f056";
+                left: 0;
+            }
+        }
+    }
+}
+
+
+.radio-check-switch input[type=radio]:checked .radio-switch-state {
+    box-shadow: 0px 20px 30px #DDEEFB;
+}
+
+.radio-check-switch .radio-switch-state {
+    margin: 20px;
+}
+
+
+@media (max-width: 576px) {
+    .radio-box-custom {
+        font-size: 14px;
+        height: 46px;
     }
 }
