--- a/src/scss/pages/insurance-type.scss
+++ b/src/scss/pages/insurance-type.scss
@@ -11,155 +11,8 @@
     font-size: 14px;
     line-height: 22px;
     text-align: center;
-    color: #616161;
+    color: var(--color-title);
 }
-
-
-
-$background-color_1: #aaa;
-
-.radio-check-icon {
-    label {
-        >input[type="radio"]+span {
-            margin-bottom: 10px;
-            padding: 10px 15px;
-            background-color: $background-color_1;
-            display: inline-block;
-            border-radius: 3px;
-            color: var(--color-white);
-            transition: all .5s ease;
-        }
-
-        >input[type="radio"] {
-            display: none;
-        }
-    }
-
-    input[type="radio"] {
-        &:checked+span {
-            &:after {
-                content: "\f00c";
-                margin-left: 10px;
-            }
-        }
-    }
-}
-
-.radio-check-switch {
-    margin-bottom: 10px;
-
-    .ins-title {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
-        /* identical to box height, or 150% */
-        text-align: center;
-        color: var(--color-black);
-        position: absolute;
-        bottom: 16px;
-    }
-
-
-    input[type="radio"] {
-        display: none;
-
-        &:checked+.radio-switch-state {
-            .icon-on {
-                &:after {
-                    content: "✓";
-                    margin-left: 100;
-                    left: auto;
-                    right: 15px;
-                    top: 10px;
-                    font-size: 16px;
-                }
-            }
-        }
-    }
-
-    input[type="file"] {
-        display: none;
-    }
-
-    .radio-switch-state {
-        border-radius: 3px;
-        color: var(--color-primary);
-        position: relative;
-        overflow: hidden;
-        vertical-align: middle;
-        text-align: center;
-        background: var(--color-white);
-        // box-shadow: 0px 20px 30px #DDEEFB;
-        // box-shadow: 0px 20px 30px #DDEEFB;
-        border-radius: 12px;
-        padding: 10px;
-        display: block;
-        position: relative;
-        margin: 10px;
-        cursor: pointer;
-        height: 170px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: relative;
-        box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
-
-        .icon-on {
-            display: inline-block;
-            text-align: center;
-            position: absolute;
-            width: 100%;
-            top: 0;
-
-            &:after {
-                width: auto;
-                display: block;
-                line-height: auto;
-                position: absolute;
-                // transition: all .5s ease;
-                content: "✓";
-                margin-left: 100;
-                left: 100%;
-            }
-        }
-
-        .icon-off {
-            display: inline-block;
-            text-align: center;
-            position: absolute;
-            width: 100%;
-            top: 0;
-
-            &:after {
-                width: auto;
-                display: block;
-                line-height: auto;
-                position: absolute;
-                // transition: all .5s ease;
-                content: "\f056";
-                left: 0;
-            }
-        }
-    }
-}
-
-
-.radio-check-switch input[type=radio]:checked .radio-switch-state {
-    box-shadow: 0px 20px 30px #DDEEFB;
-}
-
-.radio-check-switch .radio-switch-state {
-    margin: 20px;
-}
-
-.owl-carousel .owl-stage-outer {
-    padding: 30px 0;
-}
-
-// 30 march
 
 .contain-wrapper-sm {
     max-width: 660px;
@@ -180,42 +33,6 @@ $background-color_1: #aaa;
     border-radius: 8px;
     padding: 15px;
     overflow: hidden;
-}
-
-.fs-18 {
-    font-size: 18px;
-}
-
-.fs-22 {
-    font-size: 22px;
-}
-
-.fs-12 {
-    font-size: 12px;
-}
-
-.text-gray {
-    color: var(--color-light-gray);
-}
-
-.text-black {
-    color: var(--color-black);
-}
-
-.fs-14 {
-    font-size: 14px;
-}
-
-.fs-16 {
-    font-size: 16px;
-}
-
-.fw-500 {
-    font-weight: 500;
-}
-
-.fw-600 {
-    font-weight: 600;
 }
 
 .btn-add {
@@ -258,7 +75,7 @@ $background-color_1: #aaa;
 }
 
 .note {
-    color: #01BF42;
+    color: var(--color-sucess);
     font-size: 14px;
     line-height: 22px;
     margin-bottom: 0;
