--- a/src/scss/component/_dropdown.scss
+++ b/src/scss/component/_dropdown.scss
@@ -232,7 +232,7 @@
 
 @media only screen and (max-width: 575px) {
     .f-dropdown>span>span {
-
+        padding-right: 9px;
         font-size: 13px;
     }
 
