--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -594,8 +594,8 @@ main .main-wrapper p {
     line-height: 34px;
   }
   .content p.sub-title {
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 13px;
+    line-height: 16px;
   }
   .fs-18 {
     font-size: 15px !important;
@@ -606,6 +606,21 @@ main .main-wrapper p {
   }
   .radio-label {
     font-size: 14px !important;
+  }
+  main .wrapper .content-main {
+    margin-top: 90px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .row > * {
+    padding-right: calc(var(--bs-gutter-x) * 0.3);
+    padding-left: calc(var(--bs-gutter-x) * 0.3);
+  }
+}
+@media only screen and (max-width: 360px) {
+  .row > * {
+    padding-right: calc(var(--bs-gutter-x) * 0.2);
+    padding-left: calc(var(--bs-gutter-x) * 0.2);
   }
 }
 .resend-text {
@@ -635,7 +650,6 @@ main .main-wrapper p {
   border: 1px solid var(--color-border-light);
   border-radius: 8px;
   padding: 15px;
-  overflow: hidden;
 }
 
 .btn-add {
@@ -697,6 +711,11 @@ main .main-wrapper p {
   border: none;
 }
 
+@media only screen and (max-width: 575px) {
+  .white-box {
+    padding: 15px 10px;
+  }
+}
 .back-arrow {
   font-family: "Roboto";
   font-style: normal;
@@ -1410,6 +1429,7 @@ aside .sidebar .user-info {
 
 @media only screen and (max-width: 575px) {
   .f-dropdown > span > span {
+    padding-right: 9px;
     font-size: 13px;
   }
   .f-dropdown > span:before,
