--- a/src/assets/css/pages/insurance-type.css
+++ b/src/assets/css/pages/insurance-type.css
@@ -136,7 +136,6 @@
   border: 1px solid var(--color-border-light);
   border-radius: 8px;
   padding: 15px;
-  overflow: hidden;
 }
 
 .btn-add {
@@ -196,5 +195,11 @@
 }
 .car-block:last-of-type {
   border: none;
+}
+
+@media only screen and (max-width: 575px) {
+  .white-box {
+    padding: 15px 10px;
+  }
 }
 /*# sourceMappingURL=insurance-type.css.map */
