--- a/src/assets/css/pages/insurance-type.css
+++ b/src/assets/css/pages/insurance-type.css
@@ -202,4 +202,10 @@
     padding: 15px 10px;
   }
 }
+@media only screen and (min-width: 1400px) {
+  .contain-wrapper-sm {
+    max-width: 690px;
+    margin: 0 auto;
+  }
+}
 /*# sourceMappingURL=insurance-type.css.map */
