--- a/src/scss/component/_input.scss
+++ b/src/scss/component/_input.scss
@@ -128,3 +128,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
     }
 }
+
+@media only screen and (min-width: 1400px) {
+    .form-control {
+        height: 50px;
+        @include toRem(font-size, 16);
+
+    }
+}
