--- a/src/scss/pages/insurance-type.scss
+++ b/src/scss/pages/insurance-type.scss
@@ -103,3 +103,10 @@
     }
 
 }
+
+@media only screen and (min-width: 1400px) {
+    .contain-wrapper-sm {
+        max-width: 690px;
+        margin: 0 auto;
+    }
+}
