--- a/src/scss/pages/insurance-upload.scss
+++ b/src/scss/pages/insurance-upload.scss
@@ -53,7 +53,7 @@
         }
 
         p.ins-title {
-            font-size: 12px;
+            font-size: 14px;
             line-height: 18px;
             font-weight: 500;
         }
@@ -150,7 +150,7 @@
 
 
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1550px) {
     .upload-btn {
 
         height: 50px;
@@ -184,5 +184,6 @@
 
     .content h3.title {
         font-size: 34px;
+        line-height: 45px;
     }
 }
