--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -6,3 +6,7 @@
 @forward "driver-detail";
 @forward "other-pages";
 @forward "progress-bar";
+@forward "remarket-tab.scss";
+@forward "remarket.scss";
+@forward "found-better.scss";
+@forward "price-box.scss";
