--- a/src/scss/utils/_color.scss
+++ b/src/scss/utils/_color.scss
@@ -27,6 +27,8 @@ $colors: ("primary": $primary,
     "blue-border": $blue-border,
     "sucess": $sucess,
     "dark-blue": $dark-blue,
+    "blue-shade": $blue-shade,
+
 
 ) !default;
 
