--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -4,6 +4,7 @@ $blue: #016BBF !default;
 $sucess: #01BF42;
 $primary: #016BBF !default;
 $light-blue: #CEE6F9;
+
 $primary-text: #BE2530;
 $secondary: #cf9e69;
 $title: #616161;
@@ -25,6 +26,7 @@ $blue-light: #E6F1F9;
 $blue-light2: #F2F8FD;
 $blue-border: #99C4E5;
 $dark-blue: #22305D;
+$blue-shade: #F2F7FC !default;
 
 
 
